--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -41,3 +41,27 @@
 .brown {
   fill: $brown;
 }
+
+.half-blue {
+  fill: $half-blue;
+}
+
+.half-orange {
+  fill: $half-orange;
+}
+
+.half-teal {
+  fill: $half-teal;
+}
+
+.half-purple {
+  fill: $half-purple;
+}
+
+.half-green {
+  fill: $half-green;
+}
+
+.half-brown {
+  fill: $half-brown;
+}
