--- a/src/scss/shared-legend.scss
+++ b/src/scss/shared-legend.scss
@@ -21,3 +21,11 @@
 .checkbox-brown:checked {
   background-image: url('src/svg/checkbox-brown.svg') !important;
 }
+
+.center-piece {
+  text-align: center;
+}
+
+.legend-console {
+  margin-top: 50%;
+}
